--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "@sparticuz/chromium-min": "^126.0.0",
+    "@xenova/transformers": "^2.17.2",
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
+    "http-proxy-middleware": "^3.0.3",
     "next": "15.1.3",
     "prettier": "^3.4.2",
     "puppeteer-core": "^22.13.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sharp": "^0.33.5",
+    "vader-sentiment": "^1.1.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
