--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,16 +10,23 @@
   },
   "dependencies": {
     "@sparticuz/chromium-min": "^126.0.0",
+    "@tailwindcss/postcss": "^4.1.18",
     "@xenova/transformers": "^2.17.2",
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
     "http-proxy-middleware": "^3.0.3",
     "next": "15.1.3",
+    "next-themes": "^0.4.6",
+    "nuqs": "^2.8.6",
+    "postcss": "^8.5.6",
     "prettier": "^3.4.2",
     "puppeteer-core": "^22.13.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sharp": "^0.33.5",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.18",
+    "tailwindcss-animate": "^1.0.7",
     "vader-sentiment": "^1.1.3"
   },
   "devDependencies": {
