--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
     "@sparticuz/chromium-min": "^126.0.0",
     "@tailwindcss/postcss": "^4.1.18",
     "@xenova/transformers": "^2.17.2",
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
+    "class-variance-authority": "^0.7.1",
+    "fastest-levenshtein": "^1.0.16",
     "http-proxy-middleware": "^3.0.3",
+    "lucide-react": "^0.562.0",
     "next": "15.1.3",
     "next-themes": "^0.4.6",
     "nuqs": "^2.8.6",
