--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
     "@node-rs/argon2": "^2.0.2",
     "@oslojs/crypto": "^1.0.1",
     "@oslojs/encoding": "^1.1.0",
-    "@prisma/client": "^6.0.0",
+    "@prisma/client": "^6.19.2",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@sparticuz/chromium-min": "^126.0.0",
@@ -30,7 +30,7 @@
     "nuqs": "^2.8.6",
     "postcss": "^8.5.6",
     "prettier": "^3.4.2",
-    "prisma": "^6.0.0",
+    "prisma": "^6.19.2",
     "puppeteer-core": "^22.13.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -38,6 +38,7 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.21.0",
     "vader-sentiment": "^1.1.3"
   },
   "devDependencies": {
