--- a/client/package.json
+++ b/client/package.json
@@ -18,10 +18,12 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@sparticuz/chromium-min": "^126.0.0",
     "@tailwindcss/postcss": "^4.1.18",
+    "@tanstack/react-query": "^5.90.19",
     "@xenova/transformers": "^2.17.2",
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
+    "date-fns": "^4.1.0",
     "fastest-levenshtein": "^1.0.16",
     "http-proxy-middleware": "^3.0.3",
     "lucide-react": "^0.562.0",
@@ -29,11 +31,11 @@
     "next-themes": "^0.4.6",
     "nuqs": "^2.8.6",
     "postcss": "^8.5.6",
-    "prettier": "^3.4.2",
     "prisma": "^6.19.2",
     "puppeteer-core": "^22.13.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^10.0.2",
     "sharp": "^0.33.5",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
@@ -48,6 +50,9 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.5",
+    "prettier": "^3.8.1",
     "sass": "^1.83.4",
     "typescript": "^5"
   }
