--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^10.0.2",
     "sharp": "^0.33.5",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "tailwindcss-animate": "^1.0.7",
