--- a/crawler/Dockerfile
+++ b/crawler/Dockerfile
@@ -1,18 +1,10 @@
-FROM python:3.11-slim
+# Playwright 공식 이미지: Chromium + 시스템 의존성 포함, Cloud Run에서 안정적
+FROM mcr.microsoft.com/playwright/python:v1.49.0-noble
 
 WORKDIR /app
 
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    libnss3 libnspr4 libatk1.0-0 libatk-bridge2.0-0 libcups2 \
-    libdrm2 libdbus-1-3 libxkbcommon0 libatspi2.0-0 libxcomposite1 \
-    libxdamage1 libxfixes3 libxrandr2 libgbm1 libasound2 \
-    libpango-1.0-0 libcairo2 libx11-6 libx11-xcb1 libxcb1 \
-    libxext6 libxrender1 libglib2.0-0 fonts-liberation \
-    && rm -rf /var/lib/apt/lists/*
-
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
-RUN playwright install chromium
 
 COPY app.py .
 COPY crawler.py .
