--- a/analysis/Dockerfile
+++ b/analysis/Dockerfile
@@ -11,5 +11,4 @@ COPY sentiment_analysis.py .
 ENV PORT=8080
 EXPOSE 8080
 
-
-CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8081"]
+CMD ["sh", "-c", "uvicorn app:app --host 0.0.0.0 --port ${PORT}"]
