--- a/client/package.json
+++ b/client/package.json
@@ -49,7 +49,8 @@
     "tailwindcss": "^4.1.18",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.21.0",
-    "vader-sentiment": "^1.1.3"
+    "vader-sentiment": "^1.1.3",
+    "yahoo-finance2": "^3.13.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
